[gd_scene load_steps=5 format=3 uid="uid://cd0d4agqi2wyq"]

[ext_resource type="Theme" uid="uid://cbwkyl6gws1s2" path="res://themes/text.tres" id="1_01fbn"]
[ext_resource type="Script" uid="uid://6mybw8ppviki" path="res://UI/edit_tracker.gd" id="1_i4nip"]
[ext_resource type="PackedScene" uid="uid://dg6tns8ttve4i" path="res://UI/color_button.tscn" id="2_i4nip"]
[ext_resource type="PackedScene" uid="uid://l75pi0x4kpo0" path="res://UI/operator_change.tscn" id="3_mfwli"]

[node name="EditTracker" type="VBoxContainer"]
script = ExtResource("1_i4nip")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Tittle" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="TrackerName" type="TextEdit" parent="PanelContainer/VBoxContainer/Tittle"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
mouse_filter = 1
theme = ExtResource("1_01fbn")
placeholder_text = "TRACKER_NAME"
scroll_fit_content_height = true

[node name="TrackerColor" parent="PanelContainer/VBoxContainer/Tittle" instance=ExtResource("2_i4nip")]
layout_mode = 2

[node name="Body" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Body"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Body/VBoxContainer"]
layout_mode = 2

[node name="ButtonM1" parent="Body/VBoxContainer/HBoxContainer" instance=ExtResource("3_mfwli")]
layout_mode = 2

[node name="m1" type="SpinBox" parent="Body/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_01fbn")
rounded = true
allow_greater = true
update_on_text_changed = true
select_all_on_focus = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Body/VBoxContainer"]
layout_mode = 2

[node name="ButtonM2" parent="Body/VBoxContainer/HBoxContainer2" instance=ExtResource("3_mfwli")]
layout_mode = 2

[node name="m2" type="SpinBox" parent="Body/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_01fbn")
rounded = true
allow_greater = true
update_on_text_changed = true
select_all_on_focus = true

[node name="TrackerValue" type="SpinBox" parent="Body"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_01fbn")
max_value = 9999.0
rounded = true
allow_greater = true
allow_lesser = true
alignment = 1
update_on_text_changed = true
select_all_on_focus = true

[node name="VBoxContainer2" type="VBoxContainer" parent="Body"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Body/VBoxContainer2"]
layout_mode = 2

[node name="ButtonP1" parent="Body/VBoxContainer2/HBoxContainer" instance=ExtResource("3_mfwli")]
layout_mode = 2
operator_type = 1

[node name="p1" type="SpinBox" parent="Body/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_01fbn")
rounded = true
allow_greater = true
update_on_text_changed = true
select_all_on_focus = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Body/VBoxContainer2"]
layout_mode = 2

[node name="ButtonP2" parent="Body/VBoxContainer2/HBoxContainer2" instance=ExtResource("3_mfwli")]
layout_mode = 2
operator_type = 1

[node name="p2" type="SpinBox" parent="Body/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_01fbn")
rounded = true
allow_greater = true
update_on_text_changed = true
select_all_on_focus = true

[node name="Notes" type="TextEdit" parent="."]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("1_01fbn")
placeholder_text = "NOTES"
wrap_mode = 1
scroll_fit_content_height = true

[connection signal="focus_entered" from="PanelContainer/VBoxContainer/Tittle/TrackerName" to="." method="_on_tracker_name_focus_entered"]
[connection signal="text_changed" from="PanelContainer/VBoxContainer/Tittle/TrackerName" to="." method="_on_tracker_name_text_changed"]
[connection signal="item_selected" from="PanelContainer/VBoxContainer/Tittle/TrackerColor" to="." method="_on_tracker_color_item_selected"]
[connection signal="focus_entered" from="Notes" to="." method="_on_notes_focus_entered"]
[connection signal="text_changed" from="Notes" to="." method="_on_notes_text_changed"]
